<resources>
    <string name="app_name">TwoHourDelivery</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- name fragment -->
    <string name="frg_open_order">Открытые заявки</string>
    <string name="frg_current_order">Текущие заявки</string>
    <string name="frg_profile">Профиль</string>
    <string name="frg_info">О приложении</string>
    <string name="item_drawer_open_order">Открытые заявки</string>
    <string name="item_drawer_current_order">Текущие заявки</string>
    <string name="item_drawer_profile">Мои данные</string>
    <string name="item_drawer_info">О приожении</string>

    <!-- dialog phone -->
    <string name="dialog_phone_title">Укажите ваш номер телефона</string>
    <string name="dialog_phone_subtitle">На этот номер будет отправлено смс с кодом подтверждения</string>
    <string name="dialog_phone_second_try">Отправить код еще раз</string>
    <string name="dialog_phone_write_code_title">Введите код подтверждения из СМС</string>
    <string name="dialog_phone_send_sms">Отправить смс</string>

    <!-- dialog phone_ok -->
    <string name="dialog_phone_ok_title">Номер телефона подтвержден</string>
    <string name="dialog_phone_ok_btn_ok">ок</string>


    <string-array name="swipeRefreshColors">
        <item>@color/colorPrimary</item>
        <item>@color/colorPrimaryDark</item>
    </string-array>
    <string name="title_activity_detail_order">Описание заявки</string>
</resources>
